--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -5,6 +5,12 @@
   margin-block-start: -20px;
 }
 
+.sport_app_main_container div {
+  padding-inline-end: 22px;
+  padding-inline-start: 18px;
+}
+
+
 .sport_app_main_container__article--header {
   font-size: 28px;
   line-height: 37px;
