--- a/scss/_navigation.scss
+++ b/scss/_navigation.scss
@@ -34,7 +34,8 @@ font-size: 28px;
 }
 
 .sport_app_feature__list {
-  padding-inline-end: 52px;
+  padding-inline-end: 22px;
+  padding-inline-start: 18px;
   display: flex;
 }
 
