Fixed navigation desktop layout

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -7,21 +7,12 @@
 //   background-size: contain;
 // }
 
-.sport_app_article {
-  padding-inline-end: 22px;
-  padding-inline-start: 18px;
-}
-
-.sport_app_header__title--link {
-  text-align: center;
-}
-
 // .sport_app_header__title--link {
 //   color: transparent;
 // }
 
 /* Desktop style */
-@media(min-width: 1114px) {
+// @media(min-width: 1114px) {
   // .sport_app_header__title {
   //   background-image: url('../img/logo_sports_colour.svg');
   //   background-repeat: no-repeat;
@@ -31,5 +22,5 @@
   // .sport_app_header__title--link {
   //   text-align: start;
   // }
-}
+// }
 
