--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -33,13 +33,6 @@ a {
     max-width: 1114px; } }
 
 /* Mobile style */
-.sport_app_article {
-  padding-inline-end: 22px;
-  padding-inline-start: 18px; }
-
-.sport_app_header__title--link {
-  text-align: center; }
-
 /* Desktop style */
 .sport_app_article__navigation--list {
   display: flex;
@@ -102,8 +95,9 @@ a {
   .sport_app_feature__list_navigation:last-child {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center; }
+    justify-content: space-evenly;
+    align-items: center;
+    padding-inline-start: 70px; }
   .sport_app_footer__social_media {
     display: flex;
     flex-direction: row;
@@ -122,14 +116,21 @@ a {
     fill: #FFFFFF; }
   .list_paragraph {
     color: #FFFFFF;
-    max-width: 194px;
+    max-width: 312px;
     text-align: left; }
   .icon_link {
     display: flex; } }
 
+.sport_app_article {
+  padding-inline-end: 22px;
+  padding-inline-start: 18px; }
+
 .sport_app_article__title {
   color: #333333;
   font-size: 30px; }
+
+.sport_app_header__title--link {
+  text-align: center; }
 
 .sport_app_article__description {
   color: #4F4F4F;
@@ -138,7 +139,8 @@ a {
 @media (min-width: 1114px) {
   .sport_app_article {
     padding-top: 50px;
-    text-align: start; }
+    text-align: start;
+    margin-inline-start: -100px; }
   .sport_app_article__title {
     text-align: start;
     max-width: 546px; }
@@ -148,7 +150,7 @@ a {
 
 /* Mobile style */
 .sport_app_article {
-  text-align: center;
+  text-align: start;
   padding-top: 50px; }
 
 .sport_app_article__title {
@@ -165,7 +167,7 @@ a {
   margin-block-start: -20px; }
 
 .sport_app_main_container div {
-  padding-inline-end: 22px;
+  padding-inline-end: 85px;
   padding-inline-start: 18px; }
 
 .sport_app_main_container__article--header {
@@ -266,6 +268,6 @@ a {
   padding-inline-end: 19px; }
 
 .communication_link {
-  font-size: 16px;
+  font-size: 20px;
   line-height: 21px;
   color: #FFFFFF; }
